fix: horizontal alignment of list items in the toolbar (#95)

--- a/resources/less/components/toolbar.less
+++ b/resources/less/components/toolbar.less
@@ -1,4 +1,7 @@
 .User--directory .IndexPage-toolbar {
+    .IndexPage-toolbar-view > li {
+        vertical-align: middle;
+    }
     @media @phone {
         display: flex;
         flex-direction: column;
@@ -71,8 +74,6 @@
 }
 
 .item-search {
-    vertical-align: bottom;
-
     @media @phone {
         margin-top: 5px;
         width: 100%;
